resolved one  more N+1 issue and removed extra call to database